refactor: removed Curriculum and acad calendar dependency from academics page

--- a/iiitdsite/templates/iiitdsite/academics.html
+++ b/iiitdsite/templates/iiitdsite/academics.html
@@ -81,7 +81,7 @@
           <button type="button" id = '2' onclick=Myfunction1(this.id) class="btn btn-dark btn-lg" >ECE</button>
           <button type="button" id = '3' onclick=Myfunction1(this.id) class="btn btn-dark btn-lg" >Research</button>
           <button type="button" class="btn btn-dark btn-lg" >Academic Calender</button>
-          <button type="button" class="btn btn-dark btn-lg" >Faculty Info</button>
+          <a href="{% url 'faculty' %}"><button type="button" class="btn btn-dark btn-lg" >Faculty Info</button></a>
         
 
 
