refactor code: acads page

--- a/iiitdsite/templates/iiitdsite/acad_cse.html
+++ b/iiitdsite/templates/iiitdsite/acad_cse.html
@@ -1,15 +1,14 @@
 {% load static %}
-<img src="{% static 'iiitdsite/images/CSE.jpg' %}" class="img-fluid rounded" />
+<img src="{% static 'iiitdsite/images/CSE1.jpg' %}" class="img-fluid rounded mt-2" />
 <br>
 <br>
 <p>
   Welcome to the Department of Computer Science and Engineering (CSE) at Indian Institute of Information Technology Dharwad. At present the department has faculty graduated from eminent institutes across the globe and over 200 students working towards their Bachelor and Doctoral degrees.
 </p>
-<br>
+
 <p>
   The curriculum is designed by taking into account the latest developments in the world of computing and its applications. The department not only helps students to gain fundamental concepts and techniques of computing & its applications, but also fosters a learning environment that produces high quality computer science professionals readily employable by the industry and research organizations.
 </p>
-<br>
 <p>
   In consonance with the ethos of IIIT, research activities are always the main focus of the department. Areas of research include Data Analytics, Artificial Intelligence, Machine Learning, Cryptography & Network Security, Computer Networks and Algorithms.
 </p>
