--- a/iiitdsite/templates/iiitdsite/acad_dsai.html
+++ b/iiitdsite/templates/iiitdsite/acad_dsai.html
@@ -1,15 +1,15 @@
 {% load static %}
-<img src="{% static 'iiitdsite/images/CSE.jpg' %}" class="img-fluid rounded" />
+<img src="{% static 'iiitdsite/images/CSE2.jpg' %}" class="img-fluid rounded mt-2" />
 <br>
 <br>
 <p>
   There is no need to elaborate on the current trend in industry as well as academia: Data Science and Artificial Intelligence. In a timely initiative, IIIT Dharwad is launching a brand new BTech Program in Data Science and AI in a new Department of Data Science and Intelligent Systems. The program prepares the student for exciting careers in this new area while also giving them a core foundation in Computer Science.
 </p>
-<br>
+
 <p>
   It also equips the graduate with exposure to highly relevant application areas such as FinTech (Financial Technology) and Health Informatics.
 </p>
-<br>
+
 <p>
   The Program Educational Objectives of the BTech ECE program are to impart electronics and communication system thinking in preparing the graduates technically and professionally for IT careers, entrepreneurship, higher studies and research.
 </p>
