--- a/iiitdsite/templates/iiitdsite/acad_ece.html
+++ b/iiitdsite/templates/iiitdsite/acad_ece.html
@@ -1,15 +1,15 @@
 {% load static %}
-<img src="{% static 'iiitdsite/images/ECE.jpg' %}" class="img-fluid rounded" />
+<img src="{% static 'iiitdsite/images/ECE1.jpg' %}" class="img-fluid rounded mt-2" />
 <br>
 <br>
 <p>
   The area of information technology is witnessing tremendous growth with plenty of opportunities. Advancements look inevitable, be it in Life Sciences, Biomedical, Sensors, Internet of Things, Robotics, Computing, Artificial Intelligence, etc. The information technology is able to take large leaps, thanks to the progressive research and developmental works in electronics and communication for providing hardware and system platforms for state-of-art computing to make applications portable, real-time , energy-efficient, scalable and commercially viable.
 </p>
-<br>
+
 <p>
   In view of these requirements, the department disseminates knowledge to do research and development in areas of Chip Designing (VLSI), Micro-Electro-Mechanical Systems (MEMS), Signal and Speech Processing, Communication, Robotics, Sensors and Internet of Things to name a few and other allied inter-disciplinary domains.
 </p>
-<br>
+
 <p>
   The department is equipped with faculty members having specialization in VLSI, Speech Processing, MEMS and Communication.
 </p>
