--- a/iiitdsite/templates/iiitdsite/footer.html
+++ b/iiitdsite/templates/iiitdsite/footer.html
@@ -134,6 +134,15 @@
             </div>
           </div>
           
+          <div class="col-xl-6 col-lg-6 text-center text-lg-right">
+            <div class="copyright-text">
+              <p>
+                Site made by Velocity, IIIT Dharwad
+               
+              </p>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
