--- a/iiitdsite/templates/iiitdsite/research.html
+++ b/iiitdsite/templates/iiitdsite/research.html
@@ -10,7 +10,7 @@
   <p id ='r'>Social sciences, including women studies and communication.</p>
   <p id ='r'>Algorithms, Computational Geometry</p>
 <br>
-<p style="font-size: 20px;"><b><u>Research Scholars:</u></b></p>
+<!-- <p style="font-size: 20px;"><b><u>Research Scholars:</u></b></p>
 <div class="d-flex" style="flex-wrap: wrap;">
   {% for member in students %}
   <div class="card m-3 shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
@@ -26,4 +26,4 @@
   .card:hover{
     transform: scale(1.1);
   }
-</style>
+</style> -->
