db changes: added nav bar changes as well as added gallery

--- a/iiitdsite/templates/iiitdsite/acad_dsai.html
+++ b/iiitdsite/templates/iiitdsite/acad_dsai.html
@@ -13,3 +13,4 @@
 <p>
   The Program Educational Objectives of the BTech ECE program are to impart electronics and communication system thinking in preparing the graduates technically and professionally for IT careers, entrepreneurship, higher studies and research.
 </p>
+<a href="{{curr_dsai}}"><p><b>See the curriculum</b></p></a>
