--- a/iiitdsite/templates/iiitdsite/acad_ece.html
+++ b/iiitdsite/templates/iiitdsite/acad_ece.html
@@ -13,3 +13,4 @@
 <p>
   The department is equipped with faculty members having specialization in VLSI, Speech Processing, MEMS and Communication.
 </p>
+<a href="{{curr_ece}}"><p><b>See the curriculum</b></p></a>
