--- a/iiitdsite/templates/iiitdsite/nav_bar.html
+++ b/iiitdsite/templates/iiitdsite/nav_bar.html
@@ -156,12 +156,12 @@ id="backtonav"
                         <li class="mega-title">
                           <a href="">Academic Information</a>
                           <ul>
-                            <li><a href={{acad_link.acad_link}}>Academic Calendar</a></li>
+                            <li><a href="./academics#7">Academic Calendar</a></li>
                             <li>
                               <a href="{% url 'faculty' %}">Faculty</a>
                             </li>
                             <li>
-                              <a href="{% url 'research' %}">Research</a>
+                              <a href="./academics#3">Research</a>
                             </li>
                           </ul>
                         </li>
@@ -233,7 +233,7 @@ id="backtonav"
                           <a href="{% url 'faq' %}"> FAQs </a>
                         </li>
                         <li>
-                          <a href="{% url 'phd' %}"> Phds </a>
+                          <a href="{% url 'phd' %}"> PhDs </a>
                         </li>
                       </ul>
                     </li>
