--- a/iiitdsite/templates/iiitdsite/acad_cse.html
+++ b/iiitdsite/templates/iiitdsite/acad_cse.html
@@ -12,3 +12,5 @@
 <p>
   In consonance with the ethos of IIIT, research activities are always the main focus of the department. Areas of research include Data Analytics, Artificial Intelligence, Machine Learning, Cryptography & Network Security, Computer Networks and Algorithms.
 </p>
+
+<a href="{{curr_cse}}"><p><b>See the curriculum</b></p></a>
