acds pics changed

--- a/iiitdsite/templates/iiitdsite/acad_cse.html
+++ b/iiitdsite/templates/iiitdsite/acad_cse.html
@@ -1,5 +1,5 @@
 {% load static %}
-<img src="{% static 'iiitdsite/images/CSE1.jpg' %}" class="img-fluid rounded mt-2" />
+<img src="{% static 'iiitdsite/images/CSE1.JPG' %}" class="img-fluid rounded mt-2" />
 <br>
 <br>
 <p>
