--- a/iiitdsite/templates/iiitdsite/acad_ece.html
+++ b/iiitdsite/templates/iiitdsite/acad_ece.html
@@ -1,5 +1,5 @@
 {% load static %}
-<img src="{% static 'iiitdsite/images/ECE1.jpg' %}" class="img-fluid rounded mt-2" />
+<img src="{% static 'iiitdsite/images/ECE1.JPG' %}" class="img-fluid rounded mt-2" />
 <br>
 <br>
 <p>
