--- a/iiitdsite/templates/iiitdsite/admission_procedure.html
+++ b/iiitdsite/templates/iiitdsite/admission_procedure.html
@@ -129,7 +129,7 @@
     </div>
     <div class="justify-content-center mt-5 text-justify row">
         <div class="col-12 col-lg-12">
-            <h4><b>REQUISITES</b></h4>
+            <h4><b>PREREQUISITES</b></h4>
             <br>
             <h6>At the time of institute reporting for the admission, a student has to bring the
                 following list of original documents.</h6>
