--- a/iiitdsite/templates/iiitdsite/campus.html
+++ b/iiitdsite/templates/iiitdsite/campus.html
@@ -32,7 +32,7 @@
 		/>
 		<!--back to top-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<title>Clubs</title>
+		<title>Campus</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta
@@ -110,6 +110,50 @@
       </div>
       <br />
       <div class="p-3">
+        <h3><b>Features of the new campus:</b></h3>
+        <br>
+        <div class="row mt-2">
+          <div class="col-sm-6">
+            <img src="static/iiitdsite/images/campus/EBlock.png" alt="">
+          </div>
+          <div class="col-sm-6">
+            The Academic Building, called the e Block, has eliminated departmental boundaries, where faculty, technical staff and laboratories across departments are interspersed by design to naturally promote and nurture information exchange and collaboration. IIIT Dharwad has created a new modular space which can be easily converted to an 80-seater classroom (unlike the 60-seater) with multiple alternative seating arrangements, several different laboratory configurations and other team spaces, thereby optimizing energy efficiency and ventilation. Classrooms are indeed quite large and naturally well lit. There are two 120-seater and one 240-seater classrooms available for organizing workshops, conferences and hackathons with facilities for live streaming. The e Block has laboratories that are established with the latest computing equipment for hands-on learning. A well stocked textbook library in the e Block provides a 24/7 automated self-service facility for students to borrow and return books at any time.
+          </div>
+          <div class="row mt-2">
+            <div class="col-sm-6 d-flex align-items-center ">
+              The Main Building, referred to as the π Block, houses the boardroom, chairperson, director and registrar offices, recruitment, research, collaboration, incubation and knowledge sharing spaces. It also houses the Multi-Function Hall, called the m Block, that can be converted into an auditorium or an indoor basketball court as needed. The π Block also has a Knowledge Resource Center and an incubation space.
+            </div>
+            <div class="col-sm-6">
+              <img src="static/iiitdsite/images/campus/PiBlock.png" alt="">
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-sm-6">
+              <img src="static/iiitdsite/images/campus/BBlock.png" alt="">
+            </div>
+            <div class="col-sm-6 d-flex align-items-center">
+              The Boys’ Hostel, referred to as the b Block with about 200 rooms spread over 6 floors with a spacious Dining Hall and a Common Room for reading, games, activities, etc. Both the Dining Hall and the Common Room are of double height to give them excellent light and ventilation apart from a grand look. All rooms will be equipped with new furniture.
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-sm-6 d-flex align-items-center">
+              The Infosys Foundation Girls’ Hostel, referred to as the g Block, built by Infosys Foundation as a gift for IIIT Dharwad has about one hundred rooms. and all the same features as the Boys Hostel, if not better!
+            </div>
+            <div class="col-sm-6">
+              <img src="static/iiitdsite/images/campus/GBlock.png" alt="">
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-sm-6">
+              <img src="static/iiitdsite/images/campus/HBlock.png" alt=""> 
+            </div>
+            <div class="col-sm-6 d-flex align-items-center">
+              The Health and Fitness Block, called the h Block, has spaces for a wellness center, pharmacy, gymnasium, yoga room, activity/club rooms, music room, canteen, e-Bank, salon and a small shop for essential supplies. The h Block can be used for small gatherings, music, and digital screening. The canteen has both indoor and outdoor seating.
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="p-3">
         <h3 style="font-size: 20px"><b>Features of the new campus:</b></h3>
         <br />
         <div class="row">
@@ -198,7 +242,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div> -->
 	  <div class="container">
 		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
