--- a/iiitdsite/templates/iiitdsite/scholarship.html
+++ b/iiitdsite/templates/iiitdsite/scholarship.html
@@ -111,11 +111,11 @@
         <br>
         <div class="container-fluid">
           <div class="iframe-container"><iframe style="width: 100%; height: 30rem;" title="scholarship"
-            src="https://docs.google.com/spreadsheets/d/1Qfs5B0QjI5xErYF3BoJV0jnhNNtdXeye/edit?usp=sharing&ouid=114493113975464995241&rtpof=true&sd=true"></iframe>
+            src="https://docs.google.com/spreadsheets/d/1-JXbAFGslkHnUaodRYgVDOrsoSc94DnI1AXw5Jm1WcM/edit?usp=sharing"></iframe>
         </div>
         </div>
       <h6 class="mt-5"><b><a
-        href="https://docs.google.com/spreadsheets/d/1Qfs5B0QjI5xErYF3BoJV0jnhNNtdXeye/edit?usp=sharing&ouid=114493113975464995241&rtpof=true&sd=true"
+        href="https://docs.google.com/spreadsheets/d/1-JXbAFGslkHnUaodRYgVDOrsoSc94DnI1AXw5Jm1WcM/edit?usp=sharing"
         target="_blank" rel="noopener noreferrer">Click here for the detailed 
         view</a></b><br><br><b>Note:</b> The provided information is indicative. Eligibility criteria, Value
     of scholarship, selection criteria and other parameters shall be decided by the concerned scholarship
