--- a/iiitdsite/templates/iiitdsite/index.html
+++ b/iiitdsite/templates/iiitdsite/index.html
@@ -262,7 +262,7 @@
     height: 0px;
   }
   50% {
-    height: 65px;
+    height: 45px;
   }
 }
 
@@ -274,7 +274,7 @@
     height: 0px;
   }
   50% {
-    height: 85px;
+    height: 45px;
   }
 }
 
@@ -287,7 +287,7 @@
       height:0px;
     }
     75% {
-      height: 85px;
+      height: 45px;
     }
   }
 
@@ -319,16 +319,16 @@
 
 .I1 {
   background: #003366;
-  width: 22px;
-  height: 45px;
+  width: 30px;
+  height: 30px;
   margin-left: 15px;
   animation: I1 1s;
 }
 
 .I2 {
   background: #003366;
-  width: 22px;
-  height: 65px;
+  width: 30px;
+  height: 48px;
   margin-left: 15px;
   animation: I2 1s;
   margin-bottom: 21px;
@@ -336,30 +336,30 @@
 
 .I3 {
     background: #003366;
-    width: 22px;
-    height: 85px;
+    width: 30px;
+    height: 77px;
     margin-left: 15px;
     animation: I3 1s;
-    margin-bottom: 42px
+    margin-bottom:50px;
   }
 
   .T {
     background: #003366;
-    width: 22px;
-    height: 85px;
-    margin-left: 22px;
+    width: 30px;
+    height: 77px;
+    margin-left: 25px;
     animation: T 1s;
-    margin-bottom: 42px
+    margin-bottom: 50px;
   }  
 
   .Tbar{
       transform: rotate(90deg);
       background: #003366;
-      width: 22px;
+      width: 30px;
       height: 60px;
-      margin-left: -19px;
+      margin-left: -30px;
       animation: Tbar 1s;
-      margin-bottom: 170px
+      margin-bottom: 190px
 
   }
 
@@ -420,35 +420,34 @@
 
 .box1 {
     background: #003366;
-    width: 22px;
-    height: 22px;
-    margin-left: -4px;
+    width: 30px;
+    height: 30px;
+
     animation: box 1s;
-    margin-bottom: 88px;
+
     position:absolute;
-    margin-right:102px;
+    transform: translate(-65px,-45px);
+
   } 
 
   .box2 {
     background: #003366;
-    width: 22px;
-    height: 22px;
-    margin-left: 3px;
+    width: 30px;
+    height: 30px;
     animation: box 1s;
-    margin-bottom: 130px;
     position:absolute;
-    margin-right:35px;
+    transform: translate(-20px,-65px);
   } 
 
   .box3 {
     background: #003366;
-    width: 22px;
-    height: 22px;
-    margin-left: 19px;
+    width: 30px;
+    height: 30px;
+
     animation: box 1s;
-    margin-bottom: 170px;
+    
     position:absolute;
-    margin-right:-23px;
+    transform: translate(25px,-95px);
   } 
 
 
@@ -491,7 +490,7 @@
       height: 0px;
     }
     50% {
-      height: 40px;
+      height: 30px;
     }
   }
   
@@ -504,7 +503,7 @@
         height:0px;
       }
       75% {
-        height: 50px;
+        height: 30px;
       }
     }
   
@@ -517,7 +516,7 @@
         height:0px;
       }
       100% {
-        height: 50px;
+        height: 30px;
       }
     }
   
@@ -530,14 +529,14 @@
         height:0px;
       }
       100% {
-        height: 16px;
+        height: 10px;
       }
     }  
   
   .I1 {
     background: #003366;
     width: 16px;
-    height: 30px;
+    height: 16px;
     margin-left: 13px;
     animation: I1 1s;
   }
@@ -545,19 +544,19 @@
   .I2 {
     background: #003366;
     width: 16px;
-    height: 40px;
+    height: 25.6px;
     margin-left: 13px;
     animation: I2 1s;
-    margin-bottom: 9px;
+ 
   }
   
   .I3 {
       background: #003366;
       width: 16px;
-      height: 50px;
+      height: 41.26px;
       margin-left: 13px;
       animation: I3 1s;
-      margin-bottom: 19px
+ 
     }
   
     .T {
@@ -637,9 +636,9 @@
   
   .box1 {
       background: #003366;
-      width: 16px;
-      height: 16px;
-      margin-left: 15px;
+      width: 20px;
+      height: 20px;
+      margin-left: 10px;
       animation: box 1s;
       margin-bottom: 67px;
       position:absolute;
@@ -648,9 +647,9 @@
   
     .box2 {
       background: #003366;
-      width: 16px;
-      height: 16px;
-      margin-left: 15px;
+      width: 20px;
+      height: 20px;
+      margin-left: 10px;
       animation: box 1s;
       margin-bottom: 83px;
       position:absolute;
@@ -659,9 +658,9 @@
   
     .box3 {
       background: #003366;
-      width: 16px;
-      height: 16px;
-      margin-left: 15px;
+      width: 20px;
+      height: 20px;
+      margin-left: 10px;
       animation: box 1s;
       margin-bottom: 104px;
       position:absolute;
@@ -891,8 +890,8 @@
           <div class="col-lg-1">
             <div class="logo">
               <a style="padding-left: 50px;" href="{% url 'home' %}">
-                <img src="{% static 'iiitdsite/images/IIIT_Dharwad Main Logo.png' %}" alt="IIIT Dharwad"
-                  style="transform: scale(1.8);" />
+                <img src="{% static 'iiitdsite/images/IIIT_LOGO.jpg' %}" alt="IIIT Dharwad"
+                  style="transform: scale(1.7); border-right: 0px;" />
               </a>
             </div>
           </div>
@@ -950,13 +949,13 @@
                           <a href="#">Curriculum</a>
                           <ul>
                             <li>
-                              <a href={{curr_cse}}>Computer Science & Engineering (CSE)</a>
+                              <a href="{% url 'DSAI_curr' %}">Computer Science & Engineering (CSE)</a>
                             </li>
                             <li>
-                              <a href={{curr_dsai}}>Data Science & AI (DSAI)
+                              <a href="{% url 'DSAI_curr' %}">Data Science & AI (DSAI)
                             </a>
                             <li>
-                              <a href={{curr_ece}}>Electronics & Communication Engineering(ECE)
+                              <a href="{% url 'DSAI_curr' %}">Electronics & Communication Engineering(ECE)
                               </a>
                             </li>
                             
@@ -1023,6 +1022,9 @@
                         </li>
                         <li>
                           <a href="{% url 'clubs' %}"> Clubs </a>
+                        </li>
+                        <li>
+                          <a href="{% url 'nirf' %}"> NIRF </a>
                         </li>
                         
                       </ul>
@@ -1774,8 +1776,8 @@
     }
   else{
     $(".loader").hide();
-  }
-});
+  }});
+
 
     </script>
   </body>
