changes to dsai curr

--- a/iiitdsite/templates/iiitdsite/DSAI_curr.html
+++ b/iiitdsite/templates/iiitdsite/DSAI_curr.html
@@ -165,25 +165,49 @@
                                     <td class="align-middle"></td>
                                   </tr>
                                   <tr>
+                                    <td colspan="4">Semester Credits: 21</td>
+                                  </tr>
+                                  <tr>
                                     <td colspan="4" class="text-center"><strong>Semester 3</strong></td>
                                   </tr>
                                   <tr>
-                                    <td class="align-middle">HS102</td>
-                                    <td class="align-middle">Professional Communication</td>
-                                    <td class="align-middle">2-0-4-0-4</td>
+                                    <td class="align-middle">DS201</td>
+                                    <td class="align-middle">Data and Business Analytics</td>
+                                    <td class="align-middle">3-0-2-0-4</td>
                                     <td class="align-middle"></td>
                                   </tr>
                                   <tr>
-                                    <td class="align-middle">HS102</td>
-                                    <td class="align-middle">Professional Communication</td>
-                                    <td class="align-middle">2-0-4-0-4</td>
+                                    <td class="align-middle">CS201</td>
+                                    <td class="align-middle">Discrete Mathematics</td>
+                                    <td class="align-middle">3-1-0-0-4</td>
                                     <td class="align-middle"></td>
                                   </tr>
                                   <tr>
-                                    <td class="align-middle">HS102</td>
-                                    <td class="align-middle">Professional Communication</td>
-                                    <td class="align-middle">2-0-4-0-4</td>
+                                    <td class="align-middle">CS207</td>
+                                    <td class="align-middle">Object Oriented Programming</td>
+                                    <td class="align-middle">3-0-2-0-4</td>
+                                    <td class="align-middle">DS103</td>
+                                  </tr>
+                                  <tr>
+                                    <td class="align-middle">HS201</td>
+                                    <td class="align-middle">Psychology/Sociology/LifeSkills Basket</td>
+                                    <td class="align-middle">3-1-0-0-4</td>
                                     <td class="align-middle"></td>
+                                  </tr>
+                                  <tr>
+                                    <td class="align-middle">CS202</td>
+                                    <td class="align-middle">Design & Analysis of Algorithms</td>
+                                    <td class="align-middle">3-1-0-0-4</td>
+                                    <td class="align-middle">CS102</td>
+                                  </tr>
+                                  <tr>
+                                    <td class="align-middle">HS202</td>
+                                    <td class="align-middle">Ethics</td>
+                                    <td class="align-middle">3-0-0-0-3</td>
+                                    <td class="align-middle"></td>
+                                  </tr>
+                                  <tr>
+                                    <td colspan="4">Semester Credits: 24</td>
                                   </tr>
                                   
                                 <tr>
