--- a/iiitdsite/templates/iiitdsite/academics.html
+++ b/iiitdsite/templates/iiitdsite/academics.html
@@ -164,7 +164,7 @@
               <h1 style="font-size: 8vh; font-family: Georgia, 'Times New Roman', Times, serif;">Academics</h1>
             </div>
           </br>
-            <h1><b><u>B.tech Programmes</u></b></h1>
+            <h1><b><u>B.Tech Programmes</u></b></h1>
 
           </br>
           <div>
