card size adjusted in faculty page

--- a/iiitdsite/templates/iiitdsite/faculty.html
+++ b/iiitdsite/templates/iiitdsite/faculty.html
@@ -44,7 +44,7 @@
           
             <a href="{{member.get_absolute_url}}" style="color: #333333;">
               <div class="card m-3 shadow p-3 mb-5 bg-body" style="width: 14rem;">
-                <img src="{{member.image.url}}" class="card-img-top" alt="...">
+                <img src="{{member.image.url}}" style="height: 10rem;" class="card-img-top" alt="...">
                 <br>
                 <p class="card-text" style="text-align: center;"><b>{{member.name}}</b></p>
                 <p class="card-text" style="text-align: center;">{{member.designation}}</p>
