CSE ECE and DSAI pages Added

--- a/iiitdsite/templates/iiitdsite/acad_cse.html
+++ b/iiitdsite/templates/iiitdsite/acad_cse.html
@@ -13,4 +13,4 @@
   In consonance with the ethos of IIIT, research activities are always the main focus of the department. Areas of research include Data Analytics, Artificial Intelligence, Machine Learning, Cryptography & Network Security, Computer Networks and Algorithms.
 </p>
 
-<a href="{% url 'DSAI_curr' %}"><p><b>See the curriculum</b></p></a>
+<a href="{% url 'CSE_curr' %}"><p><b>See the curriculum</b></p></a>
