--- a/iiitdsite/templates/iiitdsite/footer.html
+++ b/iiitdsite/templates/iiitdsite/footer.html
@@ -51,7 +51,8 @@
           <div class="col-xl-3 col-lg-3 mb-50">
             <div class="footer-widget" style="font-size: 15px;line-height: 25px;">
               
-              <div class="footer-widget" style="width: 400px;margin-bottom: 30px;">
+              <!-- width: 400px; -->
+              <div class="footer-widget" style="margin-bottom: 30px;">
                 <div class="footer-widget-heading">
                   <h3 style="margin-bottom: 25px;margin-top: 2px;">Useful Links</h3>
                 </div>
