feat: categorically linking and organizing the faculty page

--- a/iiitdsite/templates/iiitdsite/acad_cse.html
+++ b/iiitdsite/templates/iiitdsite/acad_cse.html
@@ -14,3 +14,5 @@
 </p>
 
 <a href="{% url 'CSE_curr' %}"><p><b>See the curriculum</b></p></a>
+
+<a href="{% url 'faculty' %}#cse"><p><b>See the faculty</b></p></a>
