--- a/iiitdsite/templates/iiitdsite/acad_ece.html
+++ b/iiitdsite/templates/iiitdsite/acad_ece.html
@@ -13,4 +13,7 @@
 <p>
   The department is equipped with faculty members having specialization in VLSI, Speech Processing, MEMS and Communication.
 </p>
+
 <a href="{% url 'ECE_curr' %}"><p><b>See the curriculum</b></p></a>
+
+<a href="{% url 'faculty' %}#ece"><p><b>See the faculty</b></p></a>
